filtered surefire argLines